nova_tests/plan138_5/neg/neg_ro_prefix_ptr.nv
// Plan 138.5 NEG — prefix `ro *` pointer modifier is forbidden.
//
// Migrate `ro * T` → `*ro T` (pointee read-only).
//
// EXPECT_COMPILE_ERROR E_POINTER_PREFIX_MODIFIER

module neg.neg_ro_prefix_ptr

extern "nova" fn p(x ro * int) -> ()
